fix z-index issue with buyTravelForm, timeoutPoup

--- a/pt-web/src/components/BookTourModal/BookTourModal.module.scss
+++ b/pt-web/src/components/BookTourModal/BookTourModal.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 2222;
   backdrop-filter: blur(4px);
 }
 
